@@ -144,89 +144,92 @@ static BOOL setSharedDefaults = NO;	/* Flag to prevent infinite recursion */
   NSArray	 *ymw_names;
   
   ampm = [NSArray arrayWithObjects: @"AM", @"PM", nil];
+
   short_month = [NSArray arrayWithObjects: 
-			 @"Jan",
-			 @"Feb",
-			 @"Mar",
-			 @"Apr",
-			 @"May",
-			 @"Jun",
-			 @"Jul",
-			 @"Aug",
-			 @"Sep",
-			 @"Oct",
-			 @"Nov",
-			 @"Dec",
-			 nil];
+    @"Jan",
+    @"Feb",
+    @"Mar",
+    @"Apr",
+    @"May",
+    @"Jun",
+    @"Jul",
+    @"Aug",
+    @"Sep",
+    @"Oct",
+    @"Nov",
+    @"Dec",
+    nil];
+
   long_month = [NSArray arrayWithObjects: 
-			@"January",
-			@"February",
-			@"March",
-			@"April",
-			@"May",
-			@"June",
-			@"July",
-			@"August",
-			@"September",
-			@"October",
-			@"November",
-			@"December",
-			nil];
+    @"January",
+    @"February",
+    @"March",
+    @"April",
+    @"May",
+    @"June",
+    @"July",
+    @"August",
+    @"September",
+    @"October",
+    @"November",
+    @"December",
+    nil];
+
   short_day = [NSArray arrayWithObjects: 
-		       @"Sun",
-		       @"Mon",
-		       @"Tue",
-		       @"Wed",
-		       @"Thu",
-		       @"Fri",
-		       @"Sat",
-		       nil];
+    @"Sun",
+    @"Mon",
+    @"Tue",
+    @"Wed",
+    @"Thu",
+    @"Fri",
+    @"Sat",
+    nil];
+
   long_day = [NSArray arrayWithObjects: 
-		      @"Sunday",
-		      @"Monday",
-		      @"Tuesday",
-		      @"Wednesday",
-		      @"Thursday",
-		      @"Friday",
-		      @"Saturday",
-		      nil];
+    @"Sunday",
+    @"Monday",
+    @"Tuesday",
+    @"Wednesday",
+    @"Thursday",
+    @"Friday",
+    @"Saturday",
+    nil];
+
   earlyt = [NSArray arrayWithObjects: 
-		    @"prior",
-		    @"last",
-		    @"past",
-		    @"ago",
-		    nil];
-  latert = [NSArray arrayWithObjects: 
-		      @"next",
-		    nil];
-  ymw_names = [NSArray arrayWithObjects: 
-		       @"year",
-		       @"month",
-		       @"week",
-		       nil];
+    @"prior",
+    @"last",
+    @"past",
+    @"ago",
+    nil];
+
+  latert = [NSArray arrayWithObjects: @"next", nil];
+
+  ymw_names = [NSArray arrayWithObjects: @"year", @"month", @"week", nil];
+
   hour_names = [NSArray arrayWithObjects: 
-			[NSArray arrayWithObjects: @"0", @"midnight", nil],
-			[NSArray arrayWithObjects: @"12", @"noon", @"lunch", nil],
-			[NSArray arrayWithObjects: @"10", @"morning", nil],
-			[NSArray arrayWithObjects: @"14", @"afternoon", nil],
-			[NSArray arrayWithObjects: @"19", @"dinner", nil],
-			nil];
+    [NSArray arrayWithObjects: @"0", @"midnight", nil],
+    [NSArray arrayWithObjects: @"12", @"noon", @"lunch", nil],
+    [NSArray arrayWithObjects: @"10", @"morning", nil],
+    [NSArray arrayWithObjects: @"14", @"afternoon", nil],
+    [NSArray arrayWithObjects: @"19", @"dinner", nil],
+    nil];
+
   registrationDefaults = [NSDictionary dictionaryWithObjectsAndKeys: 
-				       ampm, NSAMPMDesignation,
-				       long_month, NSMonthNameArray,
-				       long_day, NSWeekDayNameArray,
-				       short_month, NSShortMonthNameArray,
-				       short_day, NSShortWeekDayNameArray,
-				       @"DMYH", NSDateTimeOrdering,
-				       @"tomorrow", NSNextDayDesignations,
-				       @"nextday", NSNextNextDayDesignations,
-				       @"yesterday", NSPriorDayDesignations,
-				       @"today", NSThisDayDesignations,
-				       earlyt, NSEarlierTimeDesignations,
-				       latert, NSLaterTimeDesignations,
-				       hour_names, NSHourNameDesignations,
-				       ymw_names, NSYearMonthWeekDesignations,
-				       nil];
+    ampm, NSAMPMDesignation,
+    long_month, NSMonthNameArray,
+    long_day, NSWeekDayNameArray,
+    short_month, NSShortMonthNameArray,
+    short_day, NSShortWeekDayNameArray,
+    @"DMYH", NSDateTimeOrdering,
+    [NSArray arrayWithObject: @"tomorrow"], NSNextDayDesignations,
+    [NSArray arrayWithObject: @"nextday"], NSNextNextDayDesignations,
+    [NSArray arrayWithObject: @"yesterday"], NSPriorDayDesignations,
+    [NSArray arrayWithObject: @"today"], NSThisDayDesignations,
+    earlyt, NSEarlierTimeDesignations,
+    latert, NSLaterTimeDesignations,
+    hour_names, NSHourNameDesignations,
+    ymw_names, NSYearMonthWeekDesignations,
+    nil];
   return registrationDefaults;
 }
 
