@@ -1,3 +1,7 @@
+2001-07-10  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSUserDefaults.m: Update date/time designations to arrays
+	* Source/NSDate.m: Update to use date/time designation arrays.
 2001-07-09  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/objc-load.m: Remove bogus include of objc-load.h
